<resources>
    <string name="app_name">MusicPlayerProject</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="change_theme">Change Theme</string>

    <string name="artists_song_lyrics_and_more">Artists, Song, Lyrics, and More</string>

    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="name">Name</string>

    <integer-array name="music_img">
        <item>@drawable/tesalbum1</item>
        <item>@drawable/tesalbum2</item>
        <item>@drawable/tesalbum1</item>
        <item>@drawable/tesalbum2</item>
        <item>@drawable/tesalbum1</item>
        <item>@drawable/tesalbum2</item>
        <item>@drawable/tesalbum1</item>
        <item>@drawable/tesalbum2</item>
    </integer-array>

    <integer-array name="playlist_img">
        <item>@drawable/bg_profile</item>
        <item>@drawable/prof_pict</item>
        <item>@drawable/bg_profile</item>
        <item>@drawable/prof_pict</item>

    </integer-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_play_all">Play All</string>
    <string name="shuffle">Shuffle</string>
    <string name="songs">Songs</string>
    <string name="playlist_title">Title</string>
    <string name="playlist_desc">Desc</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_note">Tip: Click On ➕ To Create New Playlist.</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="user_name">Your Name</string>
    <string name="playlist_btn">Playlist</string>
    <string name="back_btn">Back</string>


</resources>