<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.musicplayerproject.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <action
        android:id="@+id/action_homeFragment_to_playlistFragment"
        app:destination="@id/playlistFragment" />
    <action
        android:id="@+id/action_homeFragment_to_exploreFragment"
        app:destination="@id/exploreFragment" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.musicplayerproject.ui.fragments.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.musicplayerproject.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.musicplayerproject.ui.fragments.home.PlaylistFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_playlist" />
    <fragment
        android:id="@+id/exploreFragment"
        android:name="com.example.musicplayerproject.ui.fragments.home.explore.ExploreFragment"
        android:label="fragment_explore"
        tools:layout="@layout/fragment_explore" />


</navigation>