<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.home.PlaylistFragment">

<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--        android:id="@id/appBarLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <com.google.android.material.appbar.AppBarLayout-->
<!--            android:id="@+id/appBarLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/white"-->
<!--            android:fitsSystemWindows="true"-->
<!--            app:liftOnScroll="true">-->

<!--            <com.google.android.material.appbar.MaterialToolbar-->
<!--                android:id="@+id/toolbar"-->
<!--                style="@style/Toolbar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:navigationIcon="@drawable/ic_arrow_back" />-->

<!--        </com.google.android.material.appbar.AppBarLayout>-->



<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/playAction"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:paddingVertical="10dp"
        android:text="@string/action_play_all"
        android:textAppearance="@style/TextViewButton"
        android:textColor="?android:attr/textColorPrimary"
        app:icon="@drawable/ic_play_arrow"
        app:layout_constraintEnd_toStartOf="@+id/shuffleAction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shuffleAction"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="10dp"
        android:text="@string/shuffle"
        android:textAppearance="@style/TextViewButton"
        app:icon="@drawable/ic_shuffle"
        app:layout_constraintBottom_toBottomOf="@+id/playAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playAction"
        app:layout_constraintTop_toTopOf="@+id/playAction" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/songTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/songs"
        android:fontFamily="@font/poppinsbold"
        android:textSize="25dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playAction" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="@integer/overScrollMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songTitle"
        tools:listitem="@layout/item_song" />

</androidx.constraintlayout.widget.ConstraintLayout>