<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/bg_profile"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/bg_profile"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/prof_pict"
        android:scaleType="centerCrop"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_img"
        />

    <TextView
        android:id="@+id/settings"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="60sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/Settings"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_profile" />

    <androidx.cardview.widget.CardView
        android:id="@+id/change_username"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/hex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_username"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/pencil_svgrepo_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/abae_76" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/change_username"
                android:textColor="@color/abae_76"
                android:textColorHint="@color/abae_76"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_username"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/change_theme"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/hex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_username">

        <Button
            android:id="@+id/btn_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_theme"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/sun_2_svgrepo_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/abae_76" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_theme"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="15sp"
                android:textColor="@color/abae_76"
                android:layout_marginStart="8dp"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_theme"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>